<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Upload">

    <ImageButton
        android:id="@+id/back_upload"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/ic_navigate_before_black_24dp"
        />


    <TextView
        android:id="@+id/tv_data_buku"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/capt"
        android:layout_marginTop="40dp"
        android:textSize="18dp"
        android:textColor="#000"
        />

    <TextView
        android:id="@+id/tv_jdl_bku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="90dp"
        android:text="@string/jdl_bku"
        android:textSize="14dp"
        />

    <EditText
        android:id="@+id/et_jdl_bku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="77dp"
        android:ems="14"
        android:textSize="14dp"
        android:hint="@string/hint_judl_bku"
        android:inputType="textPersonName"
        />

    <TextView
        android:id="@+id/tv_jns_bku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="130dp"
        android:text="@string/jns_bku"
        android:textSize="14dp"
        />

    <EditText
        android:id="@+id/et_jns_bku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="117dp"
        android:ems="14"
        android:textSize="14dp"
        android:hint="@string/hint_jns_bku"
        android:inputType="textPersonName"
        />

    <TextView
        android:id="@+id/tv_pnls_bku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="170dp"
        android:text="@string/pnls_bku"
        android:textSize="14dp"
        />

    <EditText
        android:id="@+id/et_pnls_bku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="157dp"
        android:ems="14"
        android:textSize="14dp"
        android:hint="@string/hint_pnls_bku"
        android:inputType="textPersonName"
        />

    <TextView
        android:id="@+id/tv_thn_trbt_bku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="210dp"
        android:text="@string/thn_trbt_bku"
        android:textSize="14dp"
        />

    <EditText
        android:id="@+id/et_thn_trbt_bku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="197dp"
        android:ems="14"
        android:textSize="14dp"
        android:hint="@string/hint_thn_trbt_bku"
        android:inputType="textPersonName"
        />



        <Button
            android:id="@+id/btn_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bg_button"
            android:layout_marginLeft="20dp"
            android:text="@string/upload"
            android:textColor="#fff"
            android:layout_marginBottom="20dp"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bg_button"
            android:text="@string/logout"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="#fff"
            android:textSize="18dp"
            android:textStyle="bold" />

    </RelativeLayout>

