<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_logres"
    tools:context=".Register">
    <ImageButton
        android:id="@+id/back_register"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:onClick="back_register"
        android:background="@drawable/ic_navigate_before_black_24dp"
        />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/daftar"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:fontFamily="@font/fontbg"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/app"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:fontFamily="@font/fontbg"
        />

    <EditText
        android:id="@+id/et_register_username"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/sp_rectangle"
        android:layout_marginRight="30dp"
        android:paddingLeft="15dp"
        android:drawablePadding="20dp"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:hint="@string/username_hint"/>


    <EditText
        android:id="@+id/et_register_password"
        android:layout_below="@id/et_register_username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="15dp"
        android:drawablePadding="20dp"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:background="@drawable/sp_rectangle"
        android:hint="@string/password_hint"
        />

    <EditText
        android:id="@+id/et_password_konfirm"
        android:layout_below="@id/et_register_username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="60dp"
        android:paddingLeft="15dp"
        android:drawablePadding="20dp"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:background="@drawable/sp_rectangle"
        android:hint="@string/password_konfirm"
        />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password_konfirm"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="125dp"
        android:background="@drawable/bg_button"
        android:textColor="#fff"
        android:textSize="18dp"
        android:textStyle="bold"
        android:text="@string/registrasi"
        />


</RelativeLayout>