<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="50dp"
    tools:context=".fragment.UploadFragment"
    tools:showIn="@layout/fragment_upload">

    <TextView
        android:id="@+id/tv_judul_buku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:textSize="14dp"
        android:text="@string/tv_jdl_buku"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/et_judul_buku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:ems="14"
        android:textSize="14dp"
        android:hint="@string/hint_jdl_bku"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_judul_buku"
        app:layout_constraintStart_toEndOf="@id/tv_judul_buku"
        />

    <TextView
        android:id="@+id/tv_jenis_buku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:textSize="14dp"
        android:text="@string/tv_jenis_buku"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_judul_buku"
        />

    <EditText
        android:id="@+id/et_jenis_buku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:ems="14"
        android:textSize="14dp"
        android:hint="@string/hint_jenis_buku"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_jenis_buku"
        app:layout_constraintStart_toEndOf="@id/tv_jenis_buku"
        />





</androidx.constraintlayout.widget.ConstraintLayout>